Improve model state visibility & issue show msg

--- a/app.css
+++ b/app.css
@@ -77,6 +77,17 @@ a:hover {
     border-color: rgba(33, 150, 243, 0.45);
 }
 
+.a-btn-red {
+    border-color: #E57373;
+    padding: 1px 6px 2px 6px;
+    color: #F44336;
+}
+.a-btn-red:hover {
+   color: #F44336;
+   border: 2px solid #F44336;
+}
+  
+
 .card-box {
     padding: 10px;
     border-radius: 0px;
